Add | DataLoader, Sim, model code

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = os.path.join(os.getcwd(), 'data', 'freefall', 'num_1', 'sim_result.json')\n",
+    "path = os.path.join(os.getcwd(), 'data', 'freefall', 'num_2', 'sim_result.json')\n",
     "\n",
     "with open(path, 'r') as f:\n",
     "    f = f.read()\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "dict_keys(['time', 's', 'v', 'action'])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,16 +49,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1e966235e50>"
+       "0.01"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_r['time'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.collections.PathCollection at 0x21de84bbbe0>"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
