Edit | action remap train code, Data codes

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,16 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-20 15:35:38.836465: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-05-20 15:35:39.444773: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1613] Created device /device:GPU:0 with 21864 MB memory:  -> device: 0, name: NVIDIA TITAN RTX, pci bus id: 0000:c1:00.0, compute capability: 7.5\n"
+      "2024-06-26 10:34:53.967444: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-06-26 10:34:54.061839: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-06-26 10:34:54.062024: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-06-26 10:34:54.115392: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-06-26 10:34:54.115515: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-06-26 10:34:54.115579: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-06-26 10:34:54.115630: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /device:GPU:0 with 10238 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3080 Ti, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
      ]
     },
     {
@@ -40,22 +44,22 @@
        " memory_limit: 268435456\n",
        " locality {\n",
        " }\n",
-       " incarnation: 17436680379663852170\n",
+       " incarnation: 3780228765841731609\n",
        " xla_global_id: -1,\n",
        " name: \"/device:GPU:0\"\n",
        " device_type: \"GPU\"\n",
-       " memory_limit: 22926196736\n",
+       " memory_limit: 10735779840\n",
        " locality {\n",
        "   bus_id: 1\n",
        "   links {\n",
        "   }\n",
        " }\n",
-       " incarnation: 12382587740794533711\n",
-       " physical_device_desc: \"device: 0, name: NVIDIA TITAN RTX, pci bus id: 0000:c1:00.0, compute capability: 7.5\"\n",
+       " incarnation: 4350233009145888470\n",
+       " physical_device_desc: \"device: 0, name: NVIDIA GeForce RTX 3080 Ti, pci bus id: 0000:01:00.0, compute capability: 8.6\"\n",
        " xla_global_id: 416903419]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,153 +71,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = tf.constant([[1,0,0,0,0]], dtype=tf.float32)\n",
-    "b = tf.constant([1,0,0,0,0], dtype=tf.float32)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(1, 5), dtype=float32, numpy=array([[1., 0., 0., 0., 0.]], dtype=float32)>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tf.one_hot(tf.argmax(a, axis=-1), 5)"
+    "from b_policy.model import PolicyNetwork\n",
+    "\n",
+    "path = os.path.join(os.getcwd(), 'runs', 'policy', 'LunarLander-v2', 'train', 'model_23')\n",
+    "with open(os.path.join(path, 'config.yaml')) as f:\n",
+    "    config = yaml.load(f, Loader=yaml.FullLoader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(1,), dtype=int64, numpy=array([0], dtype=int64)>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.argmax(a, axis=-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-06-26 12:32:47.916524: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-06-26 12:32:47.916736: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-06-26 12:32:47.916866: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-06-26 12:32:47.917151: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-06-26 12:32:47.917349: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-06-26 12:32:47.917421: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-06-26 12:32:47.917506: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-06-26 12:32:47.917560: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-06-26 12:32:47.917607: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 10238 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3080 Ti, pci bus id: 0000:01:00.0, compute capability: 8.6\n",
+      "2024-06-26 12:32:47.928514: I external/local_xla/xla/stream_executor/cuda/cuda_driver.cc:1101] failed to allocate 10.00GiB (10735779840 bytes) from device: CUDA_ERROR_OUT_OF_MEMORY: out of memory\n",
+      "2024-06-26 12:32:47.928630: I external/local_xla/xla/stream_executor/cuda/cuda_driver.cc:1101] failed to allocate 9.00GiB (9662201856 bytes) from device: CUDA_ERROR_OUT_OF_MEMORY: out of memory\n",
+      "2024-06-26 12:32:47.928735: I external/local_xla/xla/stream_executor/cuda/cuda_driver.cc:1101] failed to allocate 8.10GiB (8695981056 bytes) from device: CUDA_ERROR_OUT_OF_MEMORY: out of memory\n",
+      "2024-06-26 12:32:47.928838: I external/local_xla/xla/stream_executor/cuda/cuda_driver.cc:1101] failed to allocate 7.29GiB (7826382848 bytes) from device: CUDA_ERROR_OUT_OF_MEMORY: out of memory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"policy_network\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " state_embedding (StateEmbe  (None, 64)                2336      \n",
+      " dding)                                                          \n",
+      "                                                                 \n",
+      " State_Embedding_lrelu_top   (None, 64)                0         \n",
+      " (LeakyReLU)                                                     \n",
+      "                                                                 \n",
+      " State_Embedding_Dense_top   (None, 3)                 195       \n",
+      " (Dense)                                                         \n",
+      "                                                                 \n",
+      " Action_Probability_Softmax  (None, 3)                 0         \n",
+      "  (Softmax)                                                      \n",
+      "                                                                 \n",
+      " Action_Embedding_Dense (De  multiple                  256       \n",
+      " nse)                                                            \n",
+      "                                                                 \n",
+      " Action_Embedding_lrelu (Le  multiple                  0         \n",
+      " akyReLU)                                                        \n",
+      "                                                                 \n",
+      " Generator_Dense_0 (Dense)   (None, 64)                8256      \n",
+      "                                                                 \n",
+      " Generator_Dense_1 (Dense)   (None, 32)                2080      \n",
+      "                                                                 \n",
+      " Generator_Dense_top (Dense  (None, 6)                 198       \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " Generator_lrelu_0 (LeakyRe  (None, 64)                0         \n",
+      " LU)                                                             \n",
+      "                                                                 \n",
+      " Generator_lrelu_1 (LeakyRe  (None, 32)                0         \n",
+      " LU)                                                             \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 13321 (52.04 KB)\n",
+      "Trainable params: 13321 (52.04 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(1, 5), dtype=float32, numpy=array([[1., 0., 0., 0., 0.]], dtype=float32)>"
+       "<tensorflow.python.checkpoint.checkpoint.CheckpointLoadStatus at 0x70b178ecafe0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tf.expand_dims(b, axis=0)"
+    "model = PolicyNetwork(\n",
+    "    n_state=len(config['target_cols']),\n",
+    "    n_latent_action=config['n_latent_action'],\n",
+    "    units=config['units'],\n",
+    "    layer_num=config['layer_num'],\n",
+    "    batch_size=1\n",
+    ")\n",
+    "model.build_graph()\n",
+    "model.load_weights(os.path.join(path, 'best_weights'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(1, 7), dtype=float32, numpy=array([[0., 0., 0., 1., 0., 0., 0.]], dtype=float32)>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.one_hot([3], 7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = tf.constant([[[1,2], [3,4]], [[2,1], [4,3]]], dtype=tf.float32)\n",
-    "b = tf.constant([[[0,0], [1,3]], [[1,2], [2,0]]], dtype=tf.float32)"
+    "data_path = os.path.join(os.getcwd(), 'data', 'row', 'LunarLander-v2', 'expert_data_0')\n",
+    "with open(os.path.join(data_path, 'senario_0.json')) as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "state = [data['pos_x'], data['pos_y'], data['v_x'], data['v_y'], data['angle'], data['w']]\n",
+    "state = np.transpose(state)\n",
+    "max = np.array([1.5, 1.5, 5., 5., 3.14, 5.])\n",
+    "min = np.array([-1.5, -1.5, -5., -5., -3.14, -5.])\n",
+    "state = np.divide(np.subtract(state, min), np.subtract(max, min))\n",
+    "s_next, s = state[1:,:], state[:-1,:]\n",
+    "delta_s = s_next - s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TensorShape([2, 2, 2])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dist = tf.norm(tf.subtract(a, b), axis=-1)"
+    "z_p, delta_s_hat = model(s[1:2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delta_s_max = tf.multiply(tf.reshape(delta_s_hat, (3, 6)), tf.expand_dims(tf.one_hot(tf.argmax(tf.reshape(z_p, (3,)), axis=-1), 3), axis=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(2, 2), dtype=float32, numpy=\n",
-       "array([[2.2360678, 2.2360678],\n",
-       "       [1.4142135, 3.6055512]], dtype=float32)>"
+       "<tf.Tensor: shape=(6,), dtype=float32, numpy=\n",
+       "array([-0.00250435, -0.00268843,  0.0012047 , -0.00036039,  0.00013874,\n",
+       "       -0.00165592], dtype=float32)>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dist"
+    "tf.reduce_sum(delta_s_max, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-2.03250286e-03, -2.49127547e-03,  1.14588737e-03, -2.69287825e-03,\n",
+       "        9.39330762e-05, -4.59514586e-03])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "delta_s[1]"
    ]
   },
   {
@@ -1262,7 +1301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
