Edit | policy&action remap train code, clustering code

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,25 +15,25 @@
     "import json\n",
     "import time\n",
     "import yaml\n",
-    "import os"
+    "import os\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-26 10:34:53.967444: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2024-06-26 10:34:54.061839: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2024-06-26 10:34:54.062024: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2024-06-26 10:34:54.115392: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2024-06-26 10:34:54.115515: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2024-06-26 10:34:54.115579: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2024-06-26 10:34:54.115630: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /device:GPU:0 with 10238 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3080 Ti, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+      "2024-06-27 16:00:15.117155: E external/local_xla/xla/stream_executor/cuda/cuda_driver.cc:274] failed call to cuInit: CUDA_ERROR_COMPAT_NOT_SUPPORTED_ON_DEVICE: forward compatibility was attempted on non supported HW\n",
+      "2024-06-27 16:00:15.117177: I external/local_xla/xla/stream_executor/cuda/cuda_diagnostics.cc:129] retrieving CUDA diagnostic information for host: imlab-Z690-AERO-G-DDR4\n",
+      "2024-06-27 16:00:15.117180: I external/local_xla/xla/stream_executor/cuda/cuda_diagnostics.cc:136] hostname: imlab-Z690-AERO-G-DDR4\n",
+      "2024-06-27 16:00:15.117284: I external/local_xla/xla/stream_executor/cuda/cuda_diagnostics.cc:159] libcuda reported version is: 550.90.7\n",
+      "2024-06-27 16:00:15.117295: I external/local_xla/xla/stream_executor/cuda/cuda_diagnostics.cc:163] kernel reported version is: 550.67.0\n",
+      "2024-06-27 16:00:15.117297: E external/local_xla/xla/stream_executor/cuda/cuda_diagnostics.cc:244] kernel version 550.67.0 does not match DSO version 550.90.7 -- cannot find working devices in this configuration\n"
      ]
     },
     {
@@ -44,22 +44,11 @@
        " memory_limit: 268435456\n",
        " locality {\n",
        " }\n",
-       " incarnation: 3780228765841731609\n",
-       " xla_global_id: -1,\n",
-       " name: \"/device:GPU:0\"\n",
-       " device_type: \"GPU\"\n",
-       " memory_limit: 10735779840\n",
-       " locality {\n",
-       "   bus_id: 1\n",
-       "   links {\n",
-       "   }\n",
-       " }\n",
-       " incarnation: 4350233009145888470\n",
-       " physical_device_desc: \"device: 0, name: NVIDIA GeForce RTX 3080 Ti, pci bus id: 0000:01:00.0, compute capability: 8.6\"\n",
-       " xla_global_id: 416903419]"
+       " incarnation: 9597878996790652683\n",
+       " xla_global_id: -1]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,6 +243,23 @@
    "source": [
     "delta_s[1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = os.path.join(os.getcwd(), 'data/preprocessed/LunarLander-v2/expert_data_0/policy/data_1/max_0.02.npy')\n",
+    "max = np.load(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -646,32 +652,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "paths = glob(os.path.join(os.getcwd(), 'runs', 'policy', 'LunarLander-v2', 'test', 'model*', 'test_result*'))"
+    "r = np.array([['rel_metric_pos_x', 'rel_metric_pos_y', 'rel_metric_v_x', 'rel_metric_v_y', 'rel_metric_angle', 'rel_metric_w']])\n",
+    "m = []\n",
+    "for p in paths:\n",
+    "    df = pd.read_csv(p)\n",
+    "    print(f\"{p.split(os.sep)[-2]} : \", end='')\n",
+    "    print(np.array(df[['rel_metric_pos_x', 'rel_metric_pos_y', 'rel_metric_v_x', 'rel_metric_v_y', 'rel_metric_angle', 'rel_metric_w']].mean()))\n",
+    "    # if len(r) == 0:\n",
+    "    #     r = np.array(df[['rel_metric_pos_x', 'rel_metric_pos_y', 'rel_metric_v_x', 'rel_metric_v_y', 'rel_metric_angle', 'rel_metric_w']].mean())\n",
+    "    # else:\n",
+    "    r = np.concatenate((r, np.expand_dims(np.array(df[['rel_metric_pos_x', 'rel_metric_pos_y', 'rel_metric_v_x', 'rel_metric_v_y', 'rel_metric_angle', 'rel_metric_w']].mean()), axis=0)), axis=0)\n",
+    "    m.append(p.split(os.sep)[-2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model_116 : [ 0.16402733  0.11169668  3.20665926 13.56076103  0.32339993  2.01125896]\n",
+      "model_118 : [0.23611469 0.10501007 4.07526702 7.90697471 0.3083426  2.64223186]\n",
+      "model_121 : [0.05078568 0.02319244 0.86688048 7.19569498 0.20054765 0.68288053]\n",
+      "model_135 : [0.00629074 0.01035012 0.2391578  0.50532022 0.02032177 0.28454335]\n",
+      "model_140 : [0.01760157 0.0100302  0.23283446 0.61462985 0.0226741  0.28440855]\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = np.array([['rel_metric_pos_x', 'rel_metric_pos_y', 'rel_metric_v_x', 'rel_metric_v_y', 'rel_metric_angle', 'rel_metric_w']])\n",
+    "m = []\n",
+    "for num in [116, 118, 121, 135, 140]:\n",
+    "    path = glob(os.path.join(os.getcwd(), 'runs', 'policy', 'LunarLander-v2', 'test', f'model_{num}', 'test_result*'))[0]\n",
+    "    df = pd.read_csv(path)\n",
+    "    print(f\"{path.split(os.sep)[-2]} : \", end='')\n",
+    "    print(np.array(df[['rel_metric_pos_x', 'rel_metric_pos_y', 'rel_metric_v_x', 'rel_metric_v_y', 'rel_metric_angle', 'rel_metric_w']].mean()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 2, 3])"
+       "array([2., 3.])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.array([[1],[2],[3]])\n",
-    "a.reshape(-1)"
+    "a = np.array([[1,2],[2,3],[3,4]])\n",
+    "np.mean(a, axis=0)"
    ]
   },
   {
